--- a/Deliverable 1.tex
+++ b/Deliverable 1.tex
@@ -380,6 +380,7 @@ This was the basis of research for the 2005 GenMM (Genetic Mastermind) algorithm
 Evolutionary computing serves as an adequate route for tackling decision problems such as the evaluation of possible steps to take whilst traversing the search space. 
 The most common way this area is implemented is through the use of Evolutionary Algorithms which simulate the Darwinian natural evolution process to incrementally change the heuristics of a system [2].
 
+\subsubsection {Genetic Algorithms}
 
 %%% Where is progress currently
 % Donald Knuth's implementation
